package design.factory.human;

/**
 * description:<人类接口>
 *
 * @author 武亚军 (yajun.wu@ucarinc.com)
 * @version 1.0
 * @date 2019/8/12 17:01
 */
public interface Human {

    /**高兴*/
    void laugh();
    /**交谈*/
    void talk();
    /**哭泣*/
    void cry();

}
